{
  "version": 4,
  "terraform_version": "0.13.4",
  "serial": 61,
  "lineage": "6ea3d370-fdcd-1047-3d60-7663b33246ca",
  "resources": [
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "elb-NLB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:660325953664:loadbalancer/net/elb-NLB/7f4de4c118e3c8d3",
            "arn_suffix": "net/elb-NLB/7f4de4c118e3c8d3",
            "dns_name": "elb-NLB-7f4de4c118e3c8d3.elb.us-east-1.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:660325953664:loadbalancer/net/elb-NLB/7f4de4c118e3c8d3",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "elb-NLB",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0b73402a2ff9776a4"
              }
            ],
            "subnets": [
              "subnet-0b73402a2ff9776a4"
            ],
            "tags": {
              "Name": "elb-NLB"
            },
            "vpc_id": "vpc-0a704ca94962d891a",
            "zone_id": "Z26RNL4JYFTOTI"
          },
          "dependencies": [
            "module.my_vpc.aws_subnet.subnet-pub",
            "module.my_vpc.aws_vpc.myvpc",
            "module.my_vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listen",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:660325953664:listener/net/elb-NLB/7f4de4c118e3c8d3/c5408cd5539be261",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:660325953664:targetgroup/elb-TG/9cb4edbff2bafa58",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:660325953664:listener/net/elb-NLB/7f4de4c118e3c8d3/c5408cd5539be261",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:660325953664:loadbalancer/net/elb-NLB/7f4de4c118e3c8d3",
            "port": 80,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.elb.aws_lb.elb-NLB",
            "module.elb.aws_lb_target_group.elb-TG",
            "module.my_vpc.aws_subnet.subnet-pub",
            "module.my_vpc.aws_vpc.myvpc",
            "module.my_vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "elb-TG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:660325953664:targetgroup/elb-TG/9cb4edbff2bafa58",
            "arn_suffix": "targetgroup/elb-TG/9cb4edbff2bafa58",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:660325953664:targetgroup/elb-TG/9cb4edbff2bafa58",
            "lambda_multi_value_headers_enabled": false,
            "name": "elb-TG",
            "port": 8080,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a704ca94962d891a"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:660325953664:internet-gateway/igw-0a7901038a49189e5",
            "id": "igw-0a7901038a49189e5",
            "owner_id": "660325953664",
            "tags": {
              "Name": "my-igw"
            },
            "vpc_id": "vpc-0a704ca94962d891a"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pri-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0393f34ae6caa12d3",
            "owner_id": "660325953664",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "pri-RT"
            },
            "vpc_id": "vpc-0a704ca94962d891a"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-023dc7bc37684f25c",
            "owner_id": "660325953664",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a7901038a49189e5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pub-RT"
            },
            "vpc_id": "vpc-0a704ca94962d891a"
          },
          "dependencies": [
            "module.my_vpc.aws_internet_gateway.my-igw",
            "module.my_vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d8feaa41a6bc2d9f",
            "route_table_id": "rtb-0393f34ae6caa12d3",
            "subnet_id": "subnet-0d7ff9d70682c2d7d"
          },
          "dependencies": [
            "module.my_vpc.aws_route_table.pri-RT",
            "module.my_vpc.aws_subnet.subnet-pri",
            "module.my_vpc.aws_vpc.myvpc",
            "module.my_vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b1843f93bc429157",
            "route_table_id": "rtb-0393f34ae6caa12d3",
            "subnet_id": "subnet-0e7f943b0fe3f7ae3"
          },
          "dependencies": [
            "module.my_vpc.aws_route_table.pri-RT",
            "module.my_vpc.aws_subnet.subnet-pri",
            "module.my_vpc.aws_vpc.myvpc",
            "module.my_vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0edd610d9c1e6f4dc",
            "route_table_id": "rtb-023dc7bc37684f25c",
            "subnet_id": "subnet-0a9b4edf6fe5895fa"
          },
          "dependencies": [
            "module.my_vpc.aws_internet_gateway.my-igw",
            "module.my_vpc.aws_route_table.pub-RT",
            "module.my_vpc.aws_subnet.subnet-pub",
            "module.my_vpc.aws_vpc.myvpc",
            "module.my_vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0997030e0ff4daee0",
            "route_table_id": "rtb-023dc7bc37684f25c",
            "subnet_id": "subnet-0b73402a2ff9776a4"
          },
          "dependencies": [
            "module.my_vpc.aws_internet_gateway.my-igw",
            "module.my_vpc.aws_route_table.pub-RT",
            "module.my_vpc.aws_subnet.subnet-pub",
            "module.my_vpc.aws_vpc.myvpc",
            "module.my_vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-pri",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:660325953664:subnet/subnet-0d7ff9d70682c2d7d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.3.0/24",
            "id": "subnet-0d7ff9d70682c2d7d",
            "map_public_ip_on_launch": true,
            "owner_id": "660325953664",
            "tags": {
              "Name": "myvpc-pri1"
            },
            "vpc_id": "vpc-0a704ca94962d891a"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.myvpc",
            "module.my_vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:660325953664:subnet/subnet-0e7f943b0fe3f7ae3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.4.0/24",
            "id": "subnet-0e7f943b0fe3f7ae3",
            "map_public_ip_on_launch": true,
            "owner_id": "660325953664",
            "tags": {
              "Name": "myvpc-pri2"
            },
            "vpc_id": "vpc-0a704ca94962d891a"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.myvpc",
            "module.my_vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:660325953664:subnet/subnet-0a9b4edf6fe5895fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-0a9b4edf6fe5895fa",
            "map_public_ip_on_launch": true,
            "owner_id": "660325953664",
            "tags": {
              "Name": "myvpc-pub1"
            },
            "vpc_id": "vpc-0a704ca94962d891a"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.myvpc",
            "module.my_vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:660325953664:subnet/subnet-0b73402a2ff9776a4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.2.0/24",
            "id": "subnet-0b73402a2ff9776a4",
            "map_public_ip_on_launch": true,
            "owner_id": "660325953664",
            "tags": {
              "Name": "myvpc-pub2"
            },
            "vpc_id": "vpc-0a704ca94962d891a"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.myvpc",
            "module.my_vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:660325953664:vpc/vpc-0a704ca94962d891a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-09335c88f090856e2",
            "default_route_table_id": "rtb-04e1ee3a6c967e63b",
            "default_security_group_id": "sg-0c199547dd46799f9",
            "dhcp_options_id": "dopt-24f20a5e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0a704ca94962d891a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-04e1ee3a6c967e63b",
            "owner_id": "660325953664",
            "tags": {
              "Name": "myvpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.pub_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "myvpc-SG",
      "provider": "module.pub_sg.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:660325953664:security-group/sg-0bb738e6d389174aa",
            "description": "Web Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bb738e6d389174aa",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "myvpc-SG",
            "name_prefix": "",
            "owner_id": "660325953664",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "myvpci-pubSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a704ca94962d891a"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.myvpc"
          ]
        }
      ]
    }
  ]
}